# zzpal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: BoostLog.cmake  FindOCILib.cmake  deps.cmake  preconfig.h.cmake
zzpal/: main.cpp
zzpal/base/: exception.cpp  exception.h  log.h
